# bench_aisearch

./: .env.benchmark.example  .env_metrics.example  .env_quality.example  .gitignore  README.md  pyproject.toml
bench_common/: __init__.py  current_api.py
docs/: current_aisearch_api.md
metrics/: .env_metrics  metrics_bench.py  metrics_bench_current.py
quality/: .env_quality  quality_bench.py  quality_bench_current.py
