[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bench_aisearch"
version = "0.1.0"
description = "Набор скриптов для бенчмарка качества и инфраструктурных метрик гибридного поиска AISearch"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "DevMethod", email = "Zyuzin@it.mos.ru" }
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "matplotlib>=3.9",
  "tqdm>=4.66",
  "rich>=13.9",
  "openpyxl>=3.1",
  "pyarrow>=18.0",
]
